# libsdptransform

./: .gitignore  .travis.yml  CMakeLists.txt  DISABLED.travis.yml  README.md  TODO.md  foo.sh
doc/: Grammar.md
include/: Grammar.hpp  grammar.hpp  matcher.hpp  sdptransform.hpp  string_view.hpp  string_view_lite.hpp
readme-helper/: readme.cpp
scripts/: foo.sh  get-dep.sh  test.sh
src/: Grammar.cpp  grammar.cpp  matcher.cpp  parse.cpp  parser.cpp  writer.cpp
test/: CMakeLists.txt  parse.test.cpp  test.cpp  tests.cpp
test/data/: aes67.sdp  chrome63.sdp  hacky.sdp  normal.sdp  sdp-chrome.txt  simulcast.sdp
utils/: readme.cpp
